--- a/index.html
+++ b/index.html
@@ -413,49 +413,49 @@
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <div class="testimonial-text position-relative bg-secondary text-light rounded p-5 mb-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr clita lorem
+                        la mejor finca
                     </div>
                     <div class="d-flex align-items-center pt-3">
                         <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="">
                         <div class="pl-4">
-                            <h5>Client Name</h5>
-                            <p class="m-0">Profession</p>
+                            <h5>alba</h5>
+                            <p class="m-0">arrendataria</p>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text position-relative bg-secondary text-light rounded p-5 mb-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr clita lorem
+                        siempre me dan la asesoria que necesito
                     </div>
                     <div class="d-flex align-items-center pt-3">
                         <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;" alt="">
                         <div class="pl-4">
-                            <h5>Client Name</h5>
-                            <p class="m-0">Profession</p>
+                            <h5>Jose</h5>
+                            <p class="m-0">comprador</p>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text position-relative bg-secondary text-light rounded p-5 mb-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr clita lorem
+                        me ayudaron a escoger  las propiedades
                     </div>
                     <div class="d-flex align-items-center pt-3">
                         <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;" alt="">
                         <div class="pl-4">
-                            <h5>Client Name</h5>
-                            <p class="m-0">Profession</p>
+                            <h5>Pedro</h5>
+                            <p class="m-0">arrendador</p>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text position-relative bg-secondary text-light rounded p-5 mb-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr clita lorem
+                        nos fue super
                     </div>
                     <div class="d-flex align-items-center pt-3">
                         <img class="img-fluid rounded-circle" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;" alt="">
                         <div class="pl-4">
-                            <h5>Client Name</h5>
-                            <p class="m-0">Profession</p>
+                            <h5>jake</h5>
+                            <p class="m-0">administradora </p>
                         </div>
                     </div>
                 </div>
@@ -499,9 +499,9 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 display-4 text-primary text-uppercase">Lemont propiedad raiz</h1>
+                    <h1 class="m-0 mt-n2 display-4 text-primary text-uppercase">Lemont</h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
+                <p>Propiedad Raiz</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -510,7 +510,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Popular Links</h4>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Enlaces</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
@@ -520,7 +520,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Quick Links</h4>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Enlaces</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Preguntas</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ayuda</a>
@@ -530,8 +530,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Noticias</h4>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum.</p>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Novedades</h4>
+                <p>Quieres saber lo ultimo en temas de propiedad raiz, suscribete</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-0" style="padding: 25px;" placeholder="Your Email">
@@ -544,10 +544,10 @@
         </div>
         <div class="row p-4 mt-5 mx-0" style="background: rgba(256, 256, 256, .05);">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="font-weight-bold" href="#">Lemont Propieda raiz</a>Todos los derechos reservados</p>
+                <p class="m-0 text-white">&copy; <a class="font-weight-bold" href="#">Lemont Propieda raiz </a>Todos los derechos reservados</p>
             </div>
             <div class="col-md-6 text-center text-md-right">
-                <p class="m-0 text-white">Diseñado por <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+                <p class="m-0 text-white">Diseñado por <a class="font-weight-bold" href="">Alexander Hincapie</a></p>
             </div>
         </div>
     </div>
@@ -576,4 +576,4 @@
     <script src="js/main.js"></script>
 </body>
 
-</html>
+</html>Z
